--- a/matigas/css/sass/main.sass
+++ b/matigas/css/sass/main.sass
@@ -222,3 +222,45 @@ section
 
 .map
 	padding-bottom: 50px
+
+input, textarea
+	padding: 10px
+	margin-bottom: 20px
+	width: 100%
+	border-radius: 20px
+
+.contacts button
+	margin-bottom: 20px
+
+.reg
+	z-index: 10
+	font-size: 20px
+	p
+		margin-top: 25px
+
+.reg_header
+	padding-top: 150px
+
+.whatsapp
+	float: left
+	left: 0
+	position: relative
+	display: block
+	background-image: url("../img/logo-whatsapp.jpg")
+	background-size: contain
+	background-repeat: no-repeat
+	width: 40px
+	height: 40px
+	z-index: 100
+	margin-right: 10px
+
+.contacts h1
+	margin-top: 60px
+	margin-bottom: 30px
+	text-align: center
+	font-weight: 300
+
+.main_footer
+	padding: 30px 0
+	font-size: 13px
+	font-weight: 300
