--- a/matigas/css/sass/skins/tomato.sass
+++ b/matigas/css/sass/skins/tomato.sass
@@ -57,3 +57,10 @@ p
 
 .map
 	background-color: $text_color
+
+.reg > p
+	color: #000
+
+.main_footer
+	color: $text_color_light
+	background-color: $main_color
