--- a/css/media.css
+++ b/css/media.css
@@ -2,7 +2,100 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px) {
-
+	.timeline {
+		width: 100%;
+	   padding: 4em 0 1em 0;
+   }
+   
+   .timeline li {
+	   padding: 2em 0;
+   }
+   
+   .direction-l,
+   .direction-r {
+	   float: none;
+	   width: 100%;
+   
+	   text-align: center;
+   }
+   
+   .flag-wrapper {
+	   text-align: center;
+   }
+   
+   .flag {
+	   background: rgb(255,255,255);
+	   z-index: 15;
+   }
+   
+   .direction-l .flag:before,
+   .direction-r .flag:before {
+	 position: absolute;
+	 top: -30px;
+	   left: 50%;
+	   content: ' ';
+	   display: block;
+	   width: 12px;
+	   height: 12px;
+	   margin-left: -6px;
+	   background: #fff;
+	   border-radius: 10px;
+	   border: 3px solid #19B5FE;
+	   z-index: 10;
+   }
+   
+   .direction-l .flag:after,
+   .direction-r .flag:after {
+	   content: "";
+	   position: absolute;
+	   left: 50%;
+	   top: -8px;
+	   height: 0;
+	   width: 0;
+	   margin-left: -8px;
+	   border: solid transparent;
+	   border-bottom-color: rgb(255,255,255);
+	   border-width: 8px;
+	   pointer-events: none;
+   }
+   
+   .time-wrapper {
+	   display: block;
+	   position: relative;
+	   margin: 4px 0 0 0;
+	   z-index: 14;
+   }
+   
+   .direction-l .time-wrapper {
+	   float: none;
+   }
+   
+   .direction-r .time-wrapper {
+	   float: none;
+   }
+   
+   .desc {
+	   position: relative;
+	   margin: 1em 0 0 0;
+	   padding: 1em;
+	   background: rgb(245,245,245);
+	   -webkit-box-shadow: 0 0 1px rgba(0,0,0,0.20);
+	   -moz-box-shadow: 0 0 1px rgba(0,0,0,0.20);
+	   box-shadow: 0 0 1px rgba(0,0,0,0.20);
+	   
+	 z-index: 15;
+   }
+   
+   .direction-l .desc,
+   .direction-r .desc {
+	   position: relative;
+	   margin: 1em 1em 0 1em;
+	   padding: 1em;
+	   
+	 z-index: 15;
+   }
+   
+   
 }
 
 /* Medium Devices, Desktops */
@@ -11,6 +104,10 @@
 	.resume_container .right h3,
 	.resume_container .right .resume_icon {
 		padding-left: 10px; 
+	}
+
+	.personal_last_block{
+		margin-top: 35px;
 	}
 }
 
@@ -23,6 +120,7 @@
 		margin-bottom: 10px; 
 	}
 }
+
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
@@ -41,6 +139,24 @@
 	}
 	.main_footer .social_wrap ul{ 
 		padding-left: 0 
+	}
+
+	.direction-l .desc,
+	.direction-r .desc {
+	margin: 1em 4em 0 4em;
+	}
+
+	.flag {
+		max-width: 10px;
+		overflow: hidden;
+	}
+
+	.small_screen {
+		display: inline;
+	}
+
+	.big_screen {
+		display: none;
 	}
 }
 
@@ -72,9 +188,7 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px) {
-	.personal_last_block{
-		margin-top: 35px;
-	}
+
 }
 
  /* Large Devices, Wide Screens */
