--- a/css/main.css
+++ b/css/main.css
@@ -191,10 +191,7 @@ section {
   display: inline-block; }
   .top_text p {
     margin: 0;
-    text-transform: uppercase;
-    -webkit-animation-delay: 1.45s;
-    -moz-animation-delay: 1.45s;
-    animation-delay: 1.45s; }
+    text-transform: uppercase; }
   .top_text h1 {
     display: inline-block;
     padding: 10px 30px;
@@ -206,10 +203,15 @@ section {
     font-weight: 700;
     font-size: 44px;
     background-color: rgba(0, 0, 0, 0.5);
-    -webkit-animation-delay: 1s;
-    -moz-animation-delay: 1s;
-    animation-delay: 1s; }
+    animation: fade-in-down 2s ease; }
 
+@keyframes fade-in-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 .h_opacify {
   opacity: 0.3;
   -webkit-transition: all 0.35s ease;
@@ -264,54 +266,6 @@ section {
   display: inline-block;
   font-size: 20px;
   padding: 0 5px; }
-
-.skillbar {
-  font-family: "Open Sans", "sans-serif";
-  text-align: center;
-  position: relative;
-  display: block;
-  width: 100%;
-  margin-bottom: 15px;
-  height: 35px;
-  border-radius: 3px;
-  transition: 0.4s linear;
-  transition-property: width, background-color; }
-
-.skillbar_title {
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-weight: bold;
-  font-size: 13px;
-  color: #fff;
-  background: #6adcfa;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px; }
-
-.skillbar_title span {
-  display: block;
-  background: rgba(0, 0, 0, 0.1);
-  padding: 0 20px;
-  height: 35px;
-  line-height: 35px;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px; }
-
-.skillbar_bar {
-  height: 35px;
-  width: 0;
-  background: #6adcfa;
-  border-radius: 3px; }
-
-.skillbar_bar_percent {
-  position: absolute;
-  right: 10px;
-  top: 0;
-  font-size: 11px;
-  height: 35px;
-  line-height: 35px;
-  color: #444;
-  color: rgba(0, 0, 0, 0.5); }
 
 /* ================ The Timeline ================ */
 .timeline {
@@ -397,7 +351,7 @@ section {
   margin-top: -10px;
   background: #fff;
   border-radius: 10px;
-  border: 3px solid #19B5FE;
+  border: 3px solid #bc7a00;
   z-index: 10; }
 
 .small_screen {
@@ -459,8 +413,18 @@ section {
 .direction-r .desc {
   margin: 1em 0 0 0.75em; }
 
-.education {
-  margin-top: 100px; }
+.skill_container {
+  border: 2px solid white;
+  height: 330px;
+  text-align: center;
+  padding: 30px 20px;
+  transition-duration: 0.3s;
+  transition-property: transform; }
+  .skill_container h3 {
+    margin: 20px 0; }
+
+.skill_logo {
+  font-size: 70px; }
 
 h3 {
   margin-top: 30px; }
@@ -480,25 +444,13 @@ strong {
   .resume_item:last-child {
     margin-bottom: 0; }
 
-.s_portfolio ul,
-.s_portfolio li {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  text-align: center; }
-.s_portfolio li {
-  display: inline-block;
-  margin: 0 15px;
-  text-transform: uppercase;
-  font-size: 14px;
-  cursor: pointer;
-  line-height: 2; }
-.s_portfolio ul {
-  margin-bottom: 50px; }
+.portfolio_grid {
+  text-align: center;
+  justify-content: center; }
 
 .portfolio_item {
-  display: none;
-  padding: 0; }
+  padding: 0;
+  position: relative; }
   .portfolio_item img {
     width: 100%; }
   .portfolio_item .port_item_cont {
@@ -524,6 +476,45 @@ strong {
     padding: 2px 10px;
     display: inline-block; }
 
+.mobile {
+  display: none; }
+
+.slides {
+  display: none; }
+
+.slider {
+  max-width: 500px;
+  position: relative;
+  margin: auto;
+  margin-bottom: 30px; }
+
+.dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 3px;
+  background-color: #c6cdff;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  /* Fading animation */ }
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s; }
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4; }
+  to {
+    opacity: 1; } }
+@keyframes fade {
+  from {
+    opacity: 0.4; }
+  to {
+    opacity: 1; } }
 .podrt_descr {
   background-color: #fff;
   max-width: 500px;
@@ -569,6 +560,10 @@ form button {
   text-transform: uppercase;
   font-weight: 600;
   margin-top: 10px; }
+  form button:hover {
+    transform: scale(1.1);
+    background-color: #bc7a00;
+    transition: 0.3s; }
 
 .form-group {
   display: block;
