--- a/css/sass/skins/tomato.sass
+++ b/css/sass/skins/tomato.sass
@@ -111,7 +111,7 @@ section
 		border-color: $color
 		color: $color
 
-.active, .dot:hover 
+.slider_nav .active, .dot:hover 
 	background-color: $color
 
 .main_footer a
